[gd_scene load_steps=9 format=2]

[ext_resource path="res://scripts/DetectResolution.gd" type="Script" id=1]
[ext_resource path="res://scripts/ImageLoader.gd" type="Script" id=2]
[ext_resource path="res://layout/main.gd" type="Script" id=3]
[ext_resource path="res://assets/layout.tres" type="Theme" id=4]
[ext_resource path="res://assets/overlay_font.tres" type="DynamicFont" id=5]
[ext_resource path="res://assets/floating_overlay.tres" type="Theme" id=6]

[sub_resource type="StyleBoxEmpty" id=1]

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 1, 1, 1, 1 )

[node name="Main" type="PanelContainer"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
theme = ExtResource( 4 )
custom_styles/panel = SubResource( 1 )
script = ExtResource( 3 )
__meta__ = {
"_edit_lock_": true
}

[node name="DetectResolution" type="CenterContainer" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
script = ExtResource( 1 )

[node name="Label" type="Label" parent="DetectResolution"]
margin_left = 960.0
margin_top = 521.0
margin_right = 960.0
margin_bottom = 559.0

[node name="ImageViewer" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2
script = ExtResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="BG" type="Panel" parent="ImageViewer"]
modulate = Color( 0, 0, 0, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
custom_styles/panel = SubResource( 2 )
__meta__ = {
"_edit_lock_": true
}

[node name="TextureRect" type="TextureRect" parent="ImageViewer"]
margin_left = 364.0
margin_top = 300.0
margin_right = 705.0
margin_bottom = 440.0
mouse_filter = 2
expand = true
stretch_mode = 7

[node name="Label" type="Label" parent="ImageViewer"]
margin_left = 82.0
margin_top = 61.0
margin_right = 1140.0
margin_bottom = 529.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.454902 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 5 )
text = "ras"
autowrap = true

[node name="Actions" type="Label" parent="ImageViewer"]
margin_left = 82.0
margin_top = 445.0
margin_right = 1140.0
margin_bottom = 913.0
custom_colors/font_color = Color( 1, 1, 1, 1 )
custom_colors/font_color_shadow = Color( 0, 0, 0, 0.454902 )
custom_constants/shadow_offset_x = 2
custom_constants/shadow_offset_y = 2
custom_fonts/font = ExtResource( 5 )
text = "ras"
valign = 2
autowrap = true

[node name="HBoxContainer" type="HBoxContainer" parent="ImageViewer"]
anchor_top = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = -104.0
margin_bottom = -40.0
mouse_filter = 2
theme = ExtResource( 6 )
alignment = 1

[node name="StickUp" type="Button" parent="ImageViewer/HBoxContainer"]
margin_left = 696.0
margin_right = 760.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Stick the image to the top."
text = "^"

[node name="StickLeft" type="Button" parent="ImageViewer/HBoxContainer"]
margin_left = 764.0
margin_right = 828.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Stick the image to the left margin."
text = "["

[node name="DefaultFit" type="Button" parent="ImageViewer/HBoxContainer"]
margin_left = 832.0
margin_right = 896.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Default Fit"
text = "[ ]"

[node name="StickRight" type="Button" parent="ImageViewer/HBoxContainer"]
margin_left = 900.0
margin_right = 964.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Stick the image to the right."
text = "]"

[node name="StickDown" type="Button" parent="ImageViewer/HBoxContainer"]
margin_left = 968.0
margin_right = 1032.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
hint_tooltip = "Stick the image to the bottom."
text = "v"

[node name="BackgroundPicker" type="ColorPickerButton" parent="ImageViewer/HBoxContainer"]
margin_left = 1036.0
margin_right = 1100.0
margin_bottom = 64.0
rect_min_size = Vector2( 64, 64 )
text = "BG"
edit_alpha = false

[node name="TestMagick" type="Button" parent="ImageViewer/HBoxContainer"]
margin_left = 1104.0
margin_right = 1223.0
margin_bottom = 64.0
text = "magick"

[node name="Popups" type="Control" parent="."]
margin_right = 1920.0
margin_bottom = 1080.0
mouse_filter = 2

[connection signal="resized" from="DetectResolution" to="DetectResolution" method="_on_DetectResolution_resized"]
[connection signal="pressed" from="ImageViewer/HBoxContainer/StickUp" to="ImageViewer" method="_on_StickUp_pressed"]
[connection signal="pressed" from="ImageViewer/HBoxContainer/StickLeft" to="ImageViewer" method="_on_StickLeft_pressed"]
[connection signal="pressed" from="ImageViewer/HBoxContainer/DefaultFit" to="ImageViewer" method="_on_DefaultFit_pressed"]
[connection signal="pressed" from="ImageViewer/HBoxContainer/StickRight" to="ImageViewer" method="_on_StickRight_pressed"]
[connection signal="pressed" from="ImageViewer/HBoxContainer/StickDown" to="ImageViewer" method="_on_StickDown_pressed"]
[connection signal="color_changed" from="ImageViewer/HBoxContainer/BackgroundPicker" to="ImageViewer" method="set_background"]
[connection signal="pressed" from="ImageViewer/HBoxContainer/TestMagick" to="ImageViewer" method="_on_TestMagick_pressed"]
